# ChangeLog for x11-misc/Xorgautoconfig
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.9 2006/01/22 23:06:35 corsair Exp $

  22 Jan 2006; Markus Rothe <corsair@gentoo.org>
  Xorgautoconfig-0.2.1.ebuild:
  Stable on ppc64

*Xorgautoconfig-0.2.3 (18 Jan 2006)

  18 Jan 2006; Joseph Jezak <josejx@gentoo.org> Xorgautoconfig-0.2.ebuild,
  Xorgautoconfig-0.2.1.ebuild, Xorgautoconfig-0.2.2.ebuild,
  +Xorgautoconfig-0.2.3.ebuild:
  Fixed ATI Radeon NV reporting as nvidia card, fixed homepage and source links.

*Xorgautoconfig-0.2.2 (06 Jan 2006)

  06 Jan 2006; Joseph Jezak <josejx@gentoo.org>
  +Xorgautoconfig-0.2.2.ebuild:
  Fixed mmio bug, thanks to cokehabit for pointing it out.

  17 Oct 2005; Joseph Jezak <josejx@gentoo.org> +files/pciutils.patch,
  Xorgautoconfig-0.2.1.ebuild:
  Added word/byte type fix for new pciutils.

  02 Oct 2005; Joseph Jezak <josejx@gentoo.org> Xorgautoconfig-0.2.1.ebuild:
  Marked ppc stable.

  02 Aug 2005; Markus Rothe <corsair@gentoo.org> Xorgautoconfig-0.2.ebuild:
  Stable on ppc64

*Xorgautoconfig-0.2.1 (20 Jul 2005)

  20 Jul 2005; Joseph Jezak <josejx@gentoo.org>
  +Xorgautoconfig-0.2.1.ebuild:
  Fix for PowerMac 4,2 nvidia cards, now defaults to framebuffer PCI Bus ID.

  02 Jul 2005; Markus Rothe <corsair@gentoo.org> Xorgautoconfig-0.2.ebuild:
  added ~ppc64

*Xorgautoconfig-0.2 (26 Jun 2005)

  26 Jun 2005; Joseph Jezak <josejx@gentoo.org> +metadata.xml,
  +Xorgautoconfig-0.2.ebuild:
  Initial commit.
