@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xorgautoconfig/Attic/Xorgautoconfig-0.2.2.ebuild,v 1.2 2006/01/18 18:45:01 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xorgautoconfig/Attic/Xorgautoconfig-0.2.2.ebuild,v 1.3 2006/02/09 03:53:44 josejx Exp $
 
 inherit eutils toolchain-funcs
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://gentoo/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~ppc ~ppc64"
+KEYWORDS="ppc ~ppc64"
 IUSE=""
 
 DEPEND=""
