@@ -1,1 +1,0 @@
-MD5 b1cb1a174b0ff97e0cfd6cb4b08c0c76 Xorgautoconfig-0.2.tar.bz2 43099
