@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/Xorgautoconfig
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.9 2006/01/22 23:06:35 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xorgautoconfig/ChangeLog,v 1.10 2006/02/09 03:53:44 josejx Exp $
+
+  09 Feb 2006; Joseph Jezak <josejx@gentoo.org> Xorgautoconfig-0.2.2.ebuild:
+  Marked ppc stable.
 
   22 Jan 2006; Markus Rothe <corsair@gentoo.org>
   Xorgautoconfig-0.2.1.ebuild:
